k8s/base/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: weaver
  labels:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/component: database
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: tcp-postgres
      port: 5432
      targetPort: tcp-postgres
      protocol: TCP
  selector:
    app.kubernetes.io/name: postgres
